vpc-tf/db.tf
# RDS
resource "aws_db_subnet_group" "db-sub-group" {
    name = "db-sub-group"
    subnet_ids = [ "${aws_subnet.private-sub1.id}","${aws_subnet.private-sub2.id}" ]
}


resource "aws_db_instance" "protected-db" {
    allocated_storage           = 100
    storage_type                = "gp3"
    engine                      = "mysql"
    engine_version              = "8.0"
    instance_class              = "db.t2.micro"
    identifier                  = "three-tier-db"
    username                    = "admin"
    password                    = "23vS5TdDW8*o"
    parameter_group_name        = "default.mysql8.0"
    db_subnet_group_name        = aws_db_subnet_group.db-sub-group.name
    vpc_security_group_ids      = ["${aws_security_group.db-instance.id}"]
    multi_az                    = true
    skip_final_snapshot         = true
    publicly_accessible          = false

    lifecycle {
        prevent_destroy = true
        ignore_changes  = all
    }
}
